--- a/source/request_manager/CMakeLists.txt
+++ b/source/request_manager/CMakeLists.txt
@@ -1,6 +1,6 @@
 # request_manager list
 
-include_directories(./include)
+include_directories(../logger)
 
 message("-- create request_manager_lib target")
 add_library(request_manager_lib STATIC request_manager.cpp request_exception.cpp)
