--- a/source/logger/CMakeLists.txt
+++ b/source/logger/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Logger list
 
-message("-- create logger_lib target")
+message("-- creating logger_lib target")
 add_library(logger_lib STATIC logger.cpp)
