--- a/tests/request_manager_tests/CMakeLists.txt
+++ b/tests/request_manager_tests/CMakeLists.txt
@@ -3,8 +3,14 @@
 include_directories(../source/request_manager/include)
 include_directories(${GTest_INCLUDE_DIRS})
 
-message("-- create request_manager_tests' targets")
-add_executable(r_m_test_1 test_1.cpp)
+message("-- creating request_manager_tests' targets")
 
+# Test_1
+add_executable(r_m_test_1 test_1.cpp)
 target_link_libraries(r_m_test_1 PRIVATE request_manager_lib PRIVATE logger_lib)
-target_link_libraries(r_m_test_1 PRIVATE ${GTest_INCLUDE_LIBRARIES})
+target_link_libraries(r_m_test_1 PRIVATE gtest_main gtest)
+
+# Time_test
+add_executable(r_m_time_test time_test.cpp)
+target_link_libraries(r_m_time_test PRIVATE request_manager_lib PRIVATE logger_lib)
+target_link_libraries(r_m_time_test PRIVATE gtest_main gtest)
