--- a/source/request_manager/CMakeLists.txt
+++ b/source/request_manager/CMakeLists.txt
@@ -2,5 +2,5 @@
 
 include_directories(../logger/include)
 
-message("-- create request_manager_lib target")
+message("-- creating request_manager_lib target")
 add_library(request_manager_lib STATIC request_manager.cpp request_exception.cpp)
