--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,3 +8,5 @@ add_test(NAME request_manager_test_time COMMAND r_m_time_test)
 add_test(NAME request_manager_test_1 COMMAND r_m_test_1)
 
 add_test(NAME request_manager_test_2 COMMAND r_m_test_2)
+
+add_test(NAME request_manager_test_3 COMMAND r_m_test_3)
