--- a/tests/request_manager_tests/CMakeLists.txt
+++ b/tests/request_manager_tests/CMakeLists.txt
@@ -7,22 +7,24 @@ message("-- creating request_manager_tests' targets")
 
 # Time_test
 add_executable(r_m_time_test time_test.cpp)
-target_link_libraries(r_m_time_test PRIVATE request_manager_lib PRIVATE logger_lib)
-target_link_libraries(r_m_time_test PRIVATE gtest_main gtest)
+target_link_libraries(r_m_time_test PRIVATE request_manager_lib PRIVATE gtest_main gtest)
 
 
 # Test_1
 add_executable(r_m_test_1 test_1.cpp)
-target_link_libraries(r_m_test_1 PRIVATE request_manager_lib PRIVATE logger_lib)
-target_link_libraries(r_m_test_1 PRIVATE gtest_main gtest)
+target_link_libraries(r_m_test_1 PRIVATE request_manager_lib PRIVATE gtest_main gtest)
 
 
 # Test_2
 add_executable(r_m_test_2 test_2.cpp)
-target_link_libraries(r_m_test_2 PRIVATE request_manager_lib PRIVATE logger_lib)
-target_link_libraries(r_m_test_2 PRIVATE gtest_main gtest)
+target_link_libraries(r_m_test_2 PRIVATE request_manager_lib PRIVATE gtest_main gtest)
+
 
 # Test_3
 add_executable(r_m_test_3 test_3.cpp)
-target_link_libraries(r_m_test_3 PRIVATE request_manager_lib PRIVATE logger_lib)
-target_link_libraries(r_m_test_3 PRIVATE gtest_main gtest)
+target_link_libraries(r_m_test_3 PRIVATE request_manager_lib PRIVATE gtest_main gtest)
+
+
+# Run_All_Tests_Together
+add_executable(rm_run request_manager_tests_run.cpp)
+target_link_libraries(rm_run PRIVATE request_manager_lib PRIVATE gtest_main gtest)
