the first part of the weather_service was written

--- a/source/weather_service/CMakeLists.txt
+++ b/source/weather_service/CMakeLists.txt
@@ -4,4 +4,4 @@ include_directories(../cache_manager/include)
 include_directories(../request_manager/include)
 
 message("-- creating weather_service_lib target")
-add_library(weather_service_lib STATIC weather_service.cpp)
+add_library(weather_service_lib STATIC weather_service.cpp weather_exception.cpp)
