refactoring the cache_manager module begun

--- a/source/cache_manager/CMakeLists.txt
+++ b/source/cache_manager/CMakeLists.txt
@@ -3,5 +3,9 @@
 include_directories(../logger/include)
 include_directories(../request_manager/include)
 
+message("-- creating data_base_lib")
+add_library(data_base_lib STATIC data_base.cpp data_base_exception.cpp)
+
 message("-- creating cache_manager_lib target")
 add_library(cache_manager_lib STATIC cache_manager.cpp ../request_manager/request_exception.cpp)
+target_link_libraries(cache_manager_lib PUBLIC data_base_lib)
